# gebinee

./: LICENSE  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build-and-publish.yml  build.yml  prepare.yml  publish.yml  release.yml
src/: App.vue  main.js
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/resources/: word.sqlite
src-tauri/scripts/: nsis-hooks.nsh
src-tauri/src/: lib.rs  main.rs
src/assets/css/: main.css
